# rust-boilerplate

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  Makefile  README.md
.github/workflows/: rustapp.yml
src/: lib.rs  main.rs
tests/: main_test.rs
